2009-10-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.
	
	* 0_slc/0_trivial/c99loop.c: New.

2009-10-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.
	
	* 2_lib/perf.c,
	* 2_lib/clock.c: Test the new APIs.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Check C99 math more.
	
	* 2_lib/math/avail.c: Test `float_t' and `double_t' as well.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.
	
	* 2_lib/math/avail.c,
	* 2_lib/math/tgamma.c: New.
	
2009-09-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.

	The following bugs were found: when C99 VLA's would be allocated,
	or local arrays with large sizes, the compiler would emit invalid
	code due to the stack probing logic emitted by GCC. (Reported by
	Carl Joslin).
	
	* 0_slc/4_vlas/bigvla.c,
	* 0_slc/4_vlas/idxvla.c: New.

2009-09-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.

	The following bugs were found: `setempty' was not functional for
	floating-point shared parameters; and function calls with
	heterogenous register classes as arguments would not be called
	properly.
	
	* 0_slc/1_createargs/delaysharedf.c,
	* 0_slc/4_funcalls/f11.c: New. 

2009-09-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add test for `slr' bug.
	
	* 1_slr/bigdata.c,
	* 1_slr/bigdata.c.d: New.

	* Makefile.am: Update accordingly.

2009-08-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add tests for `alloca'.
	
	* 2_lib/alloca/a1.c,
	* 2_lib/alloca/a2.c,
	* 2_lib/alloca/a3.c: New.

	* 2_lib/sac1.c: Also test `alloca' and `safe_free'.

2009-08-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* build-aux/mkalltests.sh: Be more verbose. 

2009-08-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make package less dependent on the base tree.
	
	* bootstrap: Make less verbose. Use the new `sl-init-autoconf'.

2009-08-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* ChangeLog: initialize.
